--- a/.github/workflows/first-workflow.yml
+++ b/.github/workflows/first-workflow.yml
@@ -8,3 +8,8 @@ jobs:
         run: echo "Hello World !"
       - name: Print goodbye
         run: echo "Done - bye!!"
+      - name : Multi-line output If you need to run multiple shell commands (or multi-line commands, e.g., for readability), you can easily do so by adding the pipe symbol (|) as a value after the run key.
+        run: |
+            echo "First output"
+            echo "Second output"
+      
